--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,5 +2,5 @@
 ---
 
 @import "{{ site.theme }}";
-  background-image: url(Thumbnail-image.jpg);
+  background-image: url("Thumbnail-image.jpg");
   background-size: 100% auto;
