--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
+  header:
+  image: /assets/images/image-filename.jpg
       <background-image: url("./../../Thumbnail-image.jpg")>
       <span class="project-name"> Engineering Portfolio<span>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
