--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,4 +2,4 @@
 ---
 
 @import "{{ site.theme }}";
-background-image: url("../docs/facecard.jpeg");
+background-image: <img src="/docs/facecard.jpeg">
