--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -109,7 +109,7 @@ a {
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
-  background-image: url(docs/Thumbnailimage.jpg)
+  background-image: url(./../../docs/Thumbnailimage.jpg)
 
   @include large {
     padding: 5rem 6rem;
