--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -106,7 +106,7 @@ a {
 }
 
 .page-header {
-  background-image: url(./../../docs/Thumbnailimage.jpg)
+  background-image: url(./../../docs/Thumbnail image.jpg)
 
   @include large {
     padding: 5rem 6rem;
