--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 
 
 $section-headings-color: #043669;
+$header-bg-color: #155799;
 $header-bg-color-secondary: #043669;
 
 @import "{{ site.theme }}";
