--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,6 @@
 
 $section-headings-color: #043669;
 $header-bg-color: #155799;
-$header-bg-color-secondary: #011e3b #043669;
+$header-bg-color-secondary: #011e3b;
 
 @import "{{ site.theme }}";
