--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -351,6 +351,8 @@ a {
 }
 
 .site-footer {
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
   padding-top: 2rem;
   margin-top: 2rem;
   border-top: solid 1px $hr-border-color;
