--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,8 @@ $header-bg-color: #155799;
 $header-bg-color-secondary: #011e3b;
 
 @import "{{ site.theme }}";
+
+.site-footer {
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+}
