--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@ $header-bg-color-secondary: #011e3b;
 @import "{{ site.theme }}";
 
 .site-footer {
-  margin-top: 0rem;
+  margin: 0rem;
   color: $header-heading-color;
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
