--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,11 @@ $header-bg-color-secondary: #011e3b;
 @import "{{ site.theme }}";
 
 .site-footer {
-  margin: 0;
+  max-width: 100% !important;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  
   color: $header-heading-color;
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
