--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,3 +33,20 @@ $header-bg-color-secondary: #011e3b;
   }
 
 }
+
+.site-footer-name{
+
+     @include large {
+    font-size: 3rem;
+  }
+
+  @include medium {
+    font-size: 3rem;
+  }
+
+  @include small {
+    font-size: 2.4rem;
+  }
+}
+
+}
