--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
         <span class="site-footer-name">Get in Touch</span>
-        <span class="site-footer-credits"><linkedin: <a href="https://www.linkedin.com/in/parra-christian">www.linkedin.com/in/parra-christian</a></span>
+        <span class="site-footer-credits"><br/>linkedin: <a href="https://www.linkedin.com/in/parra-christian">www.linkedin.com/in/parra-christian</a></span>
         <span class="site-footer-credits"><br/>email: christian.a.parra1@gmail.com</span>
         <span class="site-footer-credits"><br/>Phone number: (619) 993 - 8519</span>        
       </footer>
