--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,20 +19,13 @@ $header-bg-color-secondary: #011e3b;
   color: $header-heading-color;
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
-  
- @include large {
-    padding: 5rem 6rem;
-  }
-
-  @include medium {
-    padding: 3rem 4rem;
-  }
-
-  @include small {
-    padding: 2rem 1rem;
-  }
-
 }
+    
+    .site-footer-credits {
+  color: #95a6ad;
+}
+
+
 
 .site-footer-name {
 
