--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,7 +51,7 @@ $header-bg-color-secondary: #011e3b;
   display: inline-block;
   margin-bottom: 1rem;
   color: $section-headings-color;
-  background-color: rgba(255, 255, 255, 0.08);
+  background-color: rgba(4, 54, 105, 0.6)
   border-color: $section-headings-color;
   border-style: solid;
   border-width: 1px;
