--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,4 +57,8 @@ $header-bg-color-secondary: #011e3b;
   border-width: 1px;
   border-radius: 0.3rem;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+    
+    &:hover {
+    color: #2d5987;
+    }
 }
