--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,6 +59,6 @@ $header-bg-color-secondary: #011e3b;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s;
     
     &:hover {
-    color: #2d5987;
+    background-color: #2d5987;
     }
 }
